force-app/main/default/objects/b3o__Timesheet__c/b3o__Timesheet__c.object-meta.xml
<CustomObject>
    <label>Timesheet</label>
    <nameField>
        <displayFormat>TS-{0}</displayFormat>
        <label>Timesheet Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timesheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>