force-app/main/default/objects/b3o__Timesheet__c/fields/b3o__Account__c.field-meta.xml
<CustomField>
    <fullName>b3o__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Timesheets</relationshipLabel>
    <relationshipName>Timesheets</relationshipName>
    <type>Lookup</type>
</CustomField>