force-app/main/default/objects/b3o__Timesheet__c/fields/b3o__Agreement__c.field-meta.xml
<CustomField>
    <fullName>b3o__Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agreement</label>
    <referenceTo>b3o__Agreement__c</referenceTo>
    <relationshipLabel>Timesheets</relationshipLabel>
    <relationshipName>Timesheets</relationshipName>
    <type>Lookup</type>
</CustomField>