force-app/main/default/objects/b3o__Timesheet__c/fields/b3o__Is_Adjusted__c.field-meta.xml
<CustomField>
    <fullName>b3o__Is_Adjusted__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If the timesheet has been adjusted, this checkbox will be checked</inlineHelpText>
    <label>Is Adjusted?</label>
    <type>Checkbox</type>
</CustomField>