force-app/main/default/objects/b3o__Timesheet__c/fields/b3o__Is_Full_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>b3o__Is_Full_Adjustment__c</fullName>
    <formula>not(isblank( b3o__Parent_Timesheet__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Full Adjustment?</label>
    <type>Checkbox</type>
</CustomField>