force-app/main/default/objects/b3o__Timesheet__c/fields/b3o__Is_Full_Reversal__c.field-meta.xml
<CustomField>
    <fullName>b3o__Is_Full_Reversal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Full Reversal</label>
    <type>Checkbox</type>
</CustomField>