force-app/main/default/objects/b3o__Timesheet__c/fields/b3o__Type__c.field-meta.xml
<CustomField>
    <fullName>b3o__Type__c</fullName>
    <formula>if(b3o__Is_Full_Negative__c== true, &apos;Full Negative Copy&apos;, if( b3o__Is_Adjusted__c == false &amp;&amp;  b3o__Is_Adjustment__c == false, &apos;Normal&apos;, if(b3o__Is_Adjusted__c, &apos;Adjusted&apos;, &apos;Adjustment&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>