force-app/main/default/objects/b3o__Timesheet__c/listViews/b3o__All.listView-meta.xml
<ListView>
    <fullName>b3o__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>